--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>WiFi-USB v1.0</title>
-    <link rel=icon href="./favicon.png" />
+    <link rel=icon href="./images/favicon.png" />
 	<!-- Meta Tags -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Language" lang="en" />
@@ -22,11 +22,30 @@
     <script src="./index.js" type="text/javascript"></script>
 </head>
 <body class="background-animate">
-    <button type="button" id="reboot"><img src="./reboot-button-web_64.png" />Reboot</button>
-    <button type="button" id="toggle-power">
-        <img src="./power_button_green_512.png" class="power-on"  hidden="true" />
-        <img src="./power_button_red_512.png" class="power-off"/>
-    </button>
-    
+    <button type="button" id="reboot" title="Reboot WiFi-USB"><img src="./images/reboot-button-web_64.png" />Reboot</button>
+    <div class="centered">
+        <button type="button" id="toggle-power">
+            <img src="./images/power_button_green_512.png" class="power-on"  hidden="true" title="Power is On"/>
+            <img src="./images/power_button_red_512.png" class="power-off" title="Power is Off"/>
+        </button>
+        <button type="button" id="update-status" title="Refresh power status">Update Status</button>
+    </div>
+    <button type="button" id="info" title="About WiFi-USB"><img src="./images/info-icon.png" /></button>
+    <div class="info-overlay hidden">
+        <div class="rel-container">
+            <button type="button" id="info-close">Close</button>
+            <h1>WiFi-USB</h1>
+            <h3 class="about">About</h3>
+            <p>WiFi-USB is a publicly available combination of hardware and software tha allows people to remotely power on/off any device that is powered by a 5V USB port.</p>
+            <br/>
+            <h3>Creators</h3>
+            <h4><a href="https://github.com/ajcord" target="_blank">Alex Cordonnier - Hardware</a></h4>
+            <h4><a href="https://github.com/EPICmynamesBG" target="_blank">Brandon Groff - Firmware, iOS, Web</a></h4>
+            <br/>
+            <a class="button view-on-github" href="https://github.com/EPICmynamesBG/WiFi-USB" target="_blank">View on Github</a>
+            <br/>
+            <h5>Web Version 0.1</h5>
+        </div>
+    </div>
 </body>
 </html>
