--- a/web/index.html
+++ b/web/index.html
@@ -18,22 +18,22 @@
 		
     <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js" type="text/javascript" ></script>
 -->
-    
+    <script src="./dev-temp/jquery-2.2.4.min.js"></script>
+    <script src="./dev-temp/jquery.mobile-1.4.5.min.js"></script>
     <script src="./index.js" type="text/javascript"></script>
 </head>
 <body class="background-animate">
-    <button type="button" id="reboot" title="Reboot WiFi-USB"><img src="./images/reboot-button-web_64.png" />Reboot</button>
+    <button type="button" id="reboot" title="Reboot WiFi-USB" onclick="reboot()"><img src="./images/reboot-button-web_64.png" />Reboot</button>
     <div class="centered">
-        <button type="button" id="toggle-power">
-            <img src="./images/power_button_green_512.png" class="power-on"  hidden="true" title="Power is On"/>
-            <img src="./images/power_button_red_512.png" class="power-off" title="Power is Off"/>
+        <button type="button" id="toggle-power" onclick="togglePower()">
+            <div class="power-toggle power-on" title="Power is On"></div>
         </button>
-        <button type="button" id="update-status" title="Refresh power status">Update Status</button>
+        <button type="button" id="update-status" title="Refresh power status" onclick="updateStatus()">Update Status</button>
     </div>
-    <button type="button" id="info" title="About WiFi-USB"><img src="./images/info-icon.png" /></button>
-    <div class="info-overlay hidden">
+    <button type="button" id="info" title="About WiFi-USB" onclick="showInfo()"><img src="./images/info-icon.png" /></button>
+    <div class="info-overlay">
         <div class="rel-container">
-            <button type="button" id="info-close">Close</button>
+            <button type="button" id="info-close" onclick="hideInfo()">Close</button>
             <h1>WiFi-USB</h1>
             <h3 class="about">About</h3>
             <p>WiFi-USB is a publicly available combination of hardware and software tha allows people to remotely power on/off any device that is powered by a 5V USB port.</p>
