Actually remove all jQuery

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
     <button type="button" id="reboot" title="Reboot WiFi-USB" onclick="reboot()"><img src="./images/reboot-button-web_64.png" />Reboot</button>
     <div class="centered">
         <button type="button" id="toggle-power" onclick="togglePower()">
-            <div class="power-toggle power-on" title="Power is On"></div>
+            <div class="power-toggle power-on" id="power-toggle" title="Power is On"></div>
         </button>
         <button type="button" id="update-status" title="Refresh power status" onclick="updateStatus()">Update Status</button>
     </div>
